@@ -5,9 +5,7 @@ import com.behsa.medportal.domain.User;
 import com.behsa.medportal.service.dto.AdminUserDTO;
 import com.behsa.medportal.service.dto.UserDTO;
 
-import java.util.Set;
 import java.util.*;
-import java.util.Set;
 import java.util.stream.Collectors;
 import org.mapstruct.BeanMapping;
 import org.mapstruct.Mapping;
@@ -106,7 +104,7 @@ public class UserMapper {
     @Mapping(target = "id", source = "id")
     public Set<UserDTO> toDtoIdSet(Set<User> users) {
         if (users == null) {
-            return Set.of();
+            return Collections.emptySet();
         }
 
         Set<UserDTO> userSet = new HashSet<>();
@@ -137,7 +135,7 @@ public class UserMapper {
     @Mapping(target = "login", source = "login")
     public Set<UserDTO> toDtoLoginSet(Set<User> users) {
         if (users == null) {
-            return Set.of();
+            return Collections.emptySet();
         }
 
         Set<UserDTO> userSet = new HashSet<>();
